--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -146,7 +146,7 @@
           border-radius: var(--border-radius);
           font-size: 0.75rem;
           font-weight: 500;
-          transition: var(--transition-quick);
+          transition: var(--transition-fast);
 
           // Mount Status
           &.mount {
