--- a/src/app/shared/detail-shared/operation-control/operation-control.component.scss
+++ b/src/app/shared/detail-shared/operation-control/operation-control.component.scss
@@ -6,7 +6,7 @@
   box-shadow: var(--box-shadow);
   border: 1px solid rgba(var(--app-text-color-rgb), var(--border-opacity));
   overflow: hidden;
-  transition: var(--default-transition);
+  transition: var(--transition-standard);
   margin-bottom: var(--panel-gap);
   border: 2px solid transparent;
 
