--- a/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
+++ b/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
@@ -18,7 +18,7 @@
   background: rgba(var(--app-text-color-rgb), var(--background-opacity));
   border-radius: var(--item-radius);
   border: 1px solid rgba(var(--app-text-color-rgb), var(--border-opacity));
-  transition: var(--default-transition);
+  transition: var(--transition-standard);
 
   &:hover {
     background: rgba(var(--app-text-color-rgb), var(--hover-opacity));
@@ -50,8 +50,8 @@
 }
 
 .no-settings-icon {
-  width: var(--large-icon-size);
-  height: var(--large-icon-size);
+  width: var(--icon-size-lg);
+  height: var(--icon-size-lg);
   opacity: 0.5;
 }
 
