--- a/src/app/shared/detail-shared/transfer-activity-panel/active-transfers-table.component.scss
+++ b/src/app/shared/detail-shared/transfer-activity-panel/active-transfers-table.component.scss
@@ -22,7 +22,7 @@
     }
 
     .transfer-row {
-      transition: var(--quick-transition);
+      transition: var(--transition-fast);
       border-bottom: 1px solid rgba(var(--app-text-color-rgb), var(--border-opacity));
 
       &:hover {
