--- a/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.scss
+++ b/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   --icon-size: 64px;
-  --icon-size-mobile: 56px;
+  --icon-size-md: 56px;
 }
 
 .update-modal {
@@ -156,8 +156,8 @@
 // Responsive Design
 @media (max-width: 768px) {
   .modal-content .modal-icon-container .modal-icon {
-    width: var(--icon-size-mobile);
-    height: var(--icon-size-mobile);
+    width: var(--icon-size-md);
+    height: var(--icon-size-md);
 
     mat-icon {
       width: 28px;
