--- a/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.scss
+++ b/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.scss
@@ -35,8 +35,8 @@
 
       .status-icon {
         color: var(--mode-primary-color, var(--primary-color));
-        width: var(--icon-size-medium);
-        height: var(--icon-size-medium);
+        width: var(--icon-size-md);
+        height: var(--icon-size-md);
         transition: var(--transition-standard);
         will-change: color;
       }
